--- a/render.yaml
+++ b/render.yaml
@@ -1,25 +1,19 @@
-This file explicitly tells Render to deploy a Python Web Service,
-which prevents the "failed to read dockerfile" error.
+This configuration file explicitly tells Render to deploy a Python Web Service.
 services:
 
 type: web
-
-This name should match the name of your Render service.
 name: lilith-cli
 
-CRITICAL: Forces the environment to be Python, not Docker.
+Forces the environment to be Python.
 env: python
 
-Command to install Python dependencies from requirements.txt
+Command to install Python dependencies
 buildCommand: pip install -r requirements.txt
 
-Command to start the Flask application using Gunicorn
+CRITICAL: This correctly points to lilith_cli.py and the 'app' instance inside it.
 startCommand: gunicorn lilith_cli:app
 
-Environment Variables (The actual key must be set in the Render dashboard for security)
+Defines the environment variable that must be set in the Render dashboard.
 envVars:
 
 key: GEMINI_API_KEY
-
-The actual value is set securely in the Render UI; this line just makes Render aware of it.
-sync: false
